@@ -23,10 +23,11 @@ along with QSpeedTest.  If not, see <http://www.gnu.org/licenses/>.
 #include "qspeedtest.h"
 
 
-const QString PROGRAMCOMPANY = "Binary Notion";
-const QString PROGRAMAUTHOR = "parsifal";
+const QString PROJECTNAME = "QSpeedTest";
+const QString PROJECTCOMPANY = "Binary Notion";
 const QString PROGRAMNAME = "QSpeedTest";
-const QString PROGRAMVERSION = "r19";
+const QString PROGRAMAUTHOR = "parsifal";
+const QString PROGRAMVERSION = "r20";
 const QString PROGRAMURL = "https://sourceforge.net/projects/qspeedtest/files/";
 const QString PROGRAMDISCUSSURL = "https://sourceforge.net/apps/phpbb/qspeedtest";
 const QString PROGRAMUPDATECHECKURL = "http://qspeedtest.sourceforge.net/updates/qspeedtest.version";
